[gd_scene load_steps=3 format=2]

[ext_resource path="res://Botoes/Botao.gd" type="Script" id=1]
[ext_resource path="res://Art/radial light.png" type="Texture" id=2]

[node name="Botao" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

position = Vector2( 540, 960 )

[node name="Light2D" type="Light2D" parent="." index="1"]

visible = false
enabled = true
editor_only = false
texture = ExtResource( 2 )
offset = Vector2( -50, -80 )
texture_scale = 6.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D" index="0"]

position = Vector2( -303, -322 )
build_mode = 0
polygon = PoolVector2Array( 280, 280, 330, 280, 350, 310, 350, 350, 320, 370, 260, 340 )

[node name="Timer_luz" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.4
one_shot = true
autostart = false

[connection signal="mouse_entered" from="Area2D" to="." method="mouse_entrou_botao"]

[connection signal="mouse_exited" from="Area2D" to="." method="mouse_saiu_botao"]

[connection signal="timeout" from="Timer_luz" to="." method="desligaBotao"]


